--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen|Roboto|Shadows+Into+Light&display=swap');
 
 
+
 :root{
     --marine-blue:#243354;
     --deep-blue:deepskyblue;
@@ -74,6 +75,7 @@ header{
 .header.scroll{
     background-color: var(--white-fa);
     box-shadow: 0 0 0 1px var(--light-gray);
+    transition: background-color 0.5s;
 }
 .container{
     width: 100%;
@@ -102,6 +104,7 @@ nav{
 }
 .nav-band a.scroll{
     color: var(--light-black);
+    transition: color 0.5s;
 }
 .nav-band a:hover {
 text-decoration: none;
@@ -114,6 +117,7 @@ color: var(--light-black);
 }
 .open i.scroll{
     color: var(--light-black);
+    transition: color 0.5s;
 }
 .menu-icons i{
     color: var(--white-fa);
@@ -172,7 +176,7 @@ color: var(--light-black);
     top: 0;
     width: 100%;
     height: 100vh;
-    background: url('../images/main-image.png') ;
+    background: url('../images/main3.png') ;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -479,21 +483,21 @@ color: var(--light-black);
 }
 .dev{
     background: url('../images/earth-3866609_1920.jpg');
-    background-attachment: fixed !important;
+    background-attachment: fixed, scroll !important;
     background-size: cover !important;
-    background-position: left;
-    background-repeat: no-repeat;
+    background-position: left !important;
+    background-repeat: no-repeat !important;
 }
 .maintenance{
     background: url('../images/earth-3866609_1920.jpg');
-    background-attachment: fixed !important;
+    background-attachment: fixed, scroll !important;
     background-size: cover !important;
     background-position: center;
     background-repeat: no-repeat;
 }
 .seo{
     background: url('../images/earth-3866609_1920.jpg');
-    background-attachment: fixed !important;
+    background-attachment: fixed, scroll !important;
     background-size: cover !important;
     background-position: right;
     background-repeat: no-repeat;
@@ -549,6 +553,7 @@ color: var(--light-black);
     padding: 1rem 2.5rem;
     text-transform: uppercase;
     transition: background-color 650ms;
+    cursor: pointer;
 }
 .modal_btn:hover{
     background-color: var(--white-fa);
@@ -896,9 +901,32 @@ footer .btn_go_to_top a {
 
 .btn_go_to_top a.scroll{
     visibility:visible;
+    transition: visibility 1s;
 }
 
 /* **** Responsive **** */
+
+@media only screen and (max-device-width: 375px){
+    .main-message{
+        top: 30%;
+        left: 0;
+    }
+    .icon-scroll {  
+        top: 85%;   
+    }
+    
+}
+
+@media only screen and (max-device-width: 414px){
+    .main-message{
+        top: 25%;
+        left: 0;
+    }
+    .icon-scroll {  
+        top: 85%;   
+    }
+    
+}
 
 @media(min-width:568px){
     .main-message{
@@ -908,16 +936,9 @@ footer .btn_go_to_top a {
     .block-icon{
         left: 30%;
     }
+    
   }
-@media (min-width: 575.98px) {
-    .icon-scroll {  
-        top: 75%;   
-    }
-    .main-message{
-        top: 20%;
-        left: 0;
-    }
-}
+
 
 
 /* Small devices (landscape phones, less than 768px)*/
